tests/semantic_errors/testcase14.c
// function call before definition

int main(void){
    foo();
    return 1;
}

void foo(void){
    return;
}